[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["hnakashima <nakashima.alg57@gmail.com>"]
readme = "README.md"
packages = [{include = "reinforcement_learning"}]

[tool.poetry.dependencies]
python = "3.11.5"
matplotlib = "^3.6.2"
pytest = "^7.2.0"
tqdm = "^4.64.1"
coverage = "^7.3.2"
numpy = "^1.26.1"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
taskipy = "^1.12.0"
mypy = "^1.6.1"
types-tqdm = "^4.66.0.3"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "python -m ruff format ."
test = "python -m pytest tests"
# lint
lint_src = "python -m ruff check reinforcement_learning"
lint_tests = "python -m ruff check tests"
lint_examples = "python -m ruff check examples"
lint = "task lint_src && task lint_tests && task lint_examples"
fix_lint = "task lint_src --fix && task lint_tests --fix && task lint_examples --fix"
# mypy
mypy_src = "python -m mypy reinforcement_learning"
mypy_tests = "python -m mypy tests"
mypy_examples = "python -m mypy examples"
mypy = "task mypy_src && task mypy_tests && task mypy_examples"

all = "task format && task test && task lint && task mypy"